--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,33 +1,51 @@
 <div class="banner" style="background-image:url('images/Visuel_header_tablet.jpg');">
   <div class="banner-content">
-    <h1>Le Wagon Berlin</h1>
-    <p>Learn to code with us in Berlin</p>
-    <a class="btn btn-primary btn-lg">Start now</a>
+    <div class="info-banner">
+      <div class="texte-info-banner">
+        <div class="red-left">
+
+        </div>
+        <p style="color: black">VENEZ DÉCOUVRIR</p>
+        <h3 style="color: black">L'AUTOSHOW AU GOLF DE CAP MALO</h3><br>
+        <p style="color: black">Le 24 et 25 Mai 2019, partez à la découverte des plus grandes marques automobiles dans le cadre unique d'un golfe</p>
+      </div>
+    </div>
   </div>
+
 </div>
 
 
 <style>
   .banner {
   color: white;
-  text-align: center;
-  height: 60vh;
+  height: 80vh;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
-  background-size: cover !important;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+
 }
-.banner h1 {
-  font-size: 50px;
-  font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+
+.banner-content {
+    position: relative;
+    left: 1040px;
+    width: 400px;
+    text-align: left;
+    height: 80vh;
+    background-color: rgb(188, 0, 0);
 }
-.banner p {
-  font-size: 25px;
-  font-weight: lighter;
-  color: rgb(255, 255, 255);
-  opacity: 0.6;
-  margin-bottom: 30px;
+
+.info-banner {
+  position: relative;
+  top: 100px;
+  right: 350px;
+  width: 700px;
+  height: 40vh;
+  background-color: white;
+}
+
+.texte-info-banner {
+  padding-top: 80px;
+  padding-left: 200px;
+
 }
 </style>
