--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,7 +14,6 @@
 
 </div>
 
-
 <style>
   .banner {
   color: white;
@@ -49,3 +48,204 @@
 
 }
 </style>
+
+<div class="presentation">
+  <div class="texte-presentation">
+    <h1>PRÉSENTATION DU SALON DE L'AUTO</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur sequi nostrum accusamus repudiandae natus fugit, dolorem architecto voluptate dolores, voluptatum culpa optio quia eveniet animi tempora sed ex, praesentium adipisci!</p>
+  </div>
+</div>
+
+<style>
+.texte-presentation {
+  margin: 75px 100px 75px 100px;
+}
+</style>
+
+<div class="partenaires text-center">
+  <div class="row text-center">
+    <div class="col-sm-offset-1 col-sm-2 col-xs-12">
+      <%= partial "layouts/card" %>
+    </div>
+    <div class="col-sm-2 col-xs-12">
+      <%= partial "layouts/card" %>
+    </div>
+    <div class="col-sm-2 col-xs-12">
+      <%= partial "layouts/card" %>
+    </div>
+    <div class="col-sm-2 col-xs-12">
+      <%= partial "layouts/card" %>
+    </div>
+    <div class="col-sm-2 col-xs-12">
+      <%= partial "layouts/card" %>
+    </div>
+    <div class="lien-partenaires text-center">
+    <div class="col-sm-offset-1 col-sm-2">
+      <br>
+      <div class="boutton-partenaires text-center">
+        <a href="#">NOS PARTENAIRES</a>
+      </div>
+    </div>
+  </div>
+  </div>
+
+</div>
+
+<style>
+  .partenaires {
+    margin: 75px 100px 75px 100px;
+  }
+
+  .lien-partenaires {
+    margin: 25px 0 25px 0;
+  }
+
+  .boutton-partenaires {
+            -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    background-color: rgb(0, 0, 123);
+    color: #ffffff;
+    padding: 10px 0;
+  }
+
+  .boutton-partenaires a {
+    color: #ffffff;
+    text-decoration: none;
+  }
+</style>
+
+<div class="pictos-avantages">
+  <div class="row text-center">
+    <div class="col-xs-4">
+    <div class="content-blue">
+    <i class="fas fa-car fa-4x"></i>
+    <h2>29</h2>
+    <p>Marques automobiles</p>
+    </div>
+    </div>
+    <div class="col-xs-4">
+    <div class="content-blue">
+    <i class="far fa-smile fa-4x"></i>
+    <h2>+110</h2>
+    <p>Véhicules expososés</p>
+    </div>
+    </div>
+    <div class="content-blue">
+    <div class="col-xs-4">
+    <i class="fas fa-map-marked-alt fa-4x"></i>
+    <h2>21</h2>
+    <p>Hectares paysagés</p>
+    </div>
+    </div>
+  </div>
+</div>
+
+<style>
+  .pictos-avantages {
+    margin: 75px 100px 75px 100px;
+
+  }
+  .content-blue {
+    color: rgb(0, 0, 123);
+  }
+
+  .content-blue h2 {
+    text-align: center;
+
+  text-decoration: none;
+  box-shadow: inset 0 -14px 0 red;
+  -webkit-box-shadow: inset 0 -14px 0 red;
+  -webkit-transition: background .2s ease;
+  transition: background .2s ease;
+  height: 35px;
+
+  }
+
+  .content-blue p {
+    color: black;
+    opacity: 0.30;
+  }
+
+</style>
+
+  <div class="stands-marques text-center">
+  <div class="row text-center">
+    <div class="col-sm-6">
+    <div class="fond-rouge">
+
+    </div>
+    <div class="fond-blanc">
+
+    </div>
+    <div class="boutton-partenaires-2 ">
+      <a href="#">VOIR PLUS</a>
+    </div>
+
+  </div>
+
+
+<div class="col-sm-6">
+    <div class="image-golf">
+      <%= image_tag 'Visuel_Plan.png'%>
+    </div>
+</div>
+
+  </div>
+</div>
+
+
+<style>
+  .stands-marques {
+    margin: 75px 100px 0px 100px;
+  }
+
+  .image-golf {
+    z-index: 2;
+
+  }
+
+  .fond-blanc {
+    z-index: 1;
+    background-color: white;
+    height: 301px;
+    opacity: 1;
+    width: 587px;
+    position: relative;
+    left: 49px;
+    top: -119px;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+
+  }
+
+  .fond-rouge {
+    z-index: 1;
+    background-color: red;
+    height: 166px;
+    opacity: 0.5;
+    width: 587px;
+    position: relative;
+    left: 123px;
+    top: 48px;
+
+  }
+
+  .boutton-partenaires-2 {
+    z-index: 1;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    background-color: rgb(0, 0, 123);
+    color: #ffffff;
+    padding: 20px 0;
+    width: 240px;
+    left: 470px;
+    top: -118px;
+    position: relative;
+  }
+
+  .boutton-partenaires-2 a {
+        color: #ffffff;
+    text-decoration: none;
+  }
+</style>
+
