--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -1,4 +1,6 @@
+
 <div class="footer">
+
   <div class="partie1">
     <h5 class="text-center">CONTACTEZ NOUS</h5>
     <p class="text-center">contact@golfcapmalo.fr</p>
@@ -30,6 +32,21 @@
 </div>
 
 <style>
+  .retour-en-haut {
+    height: 100px;
+    width: 100px;
+    float: right;
+    background-color: red;
+    vertical-align: middle;
+  }
+
+  .fleche {
+    text-align: center;
+    vertical-align: middle;
+    color: white;
+    padding-top: 27px;
+  }
+
   .footer {
   background: rgb(0, 0, 123);
   display: flex;
@@ -38,6 +55,7 @@
   height: 150px;
   padding: 0px 50px;
   color: #ffffff;
+  width: 101%;
 }
 .footer-links {
   text-decoration: none;
