--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,51 +1,113 @@
-<div class="banner" style="background-image:url('images/Visuel_header_tablet.jpg');">
+<div class="banner" >
   <div class="banner-content">
-    <div class="info-banner">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="image-banner">
+          <%= image_tag 'Visuel_header_tablet.jpg', height: 600 %>
+        </div>
+        <div class="rouge-transparent-banner">
+        </div>
+        <div class="fond-blanc-banner">
+        <div class="texte-fond-blanc-banner">
+          <h4 style="color: rgb(0, 0, 123)">VENEZ DÉCOUVRIR</h4>
+          <h3 style="color: rgb(0, 0, 123)"><strong>L'AUTOSHOW AU GOLF DE CAP MALO</strong></h3><br>
+          <p style="color: black; opacity: 0.5;">Le 24 et 25 Mai 2019, partez à la découverte des plus grandes marques automobiles dans le cadre unique d'un golfe</p>
+        </div>
+        </div>
+        <div class="en-savoir-plus-button">
+          <a href="#">EN SAVOIR PLUS</a>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="fond-rouge-banner">
+
+        </div>
+      </div>
+    </div>
+
+
+<!--     <div class="info-banner">
       <div class="texte-info-banner">
         <div class="red-left">
 
         </div>
-        <p style="color: black">VENEZ DÉCOUVRIR</p>
-        <h3 style="color: black">L'AUTOSHOW AU GOLF DE CAP MALO</h3><br>
-        <p style="color: black">Le 24 et 25 Mai 2019, partez à la découverte des plus grandes marques automobiles dans le cadre unique d'un golfe</p>
+
       </div>
-    </div>
+    </div> -->
   </div>
 
 </div>
 
 <style>
-  .banner {
-  color: white;
-  height: 80vh;
-  /* if you have a 70px navbar => height: calc(100vh - 70px); */
-  background-size: contain;
-  background-repeat: no-repeat;
 
+.fond-blanc-banner {
+  padding-left: 27px;
+  padding-top: 50px;
 }
 
-.banner-content {
-    position: relative;
-    left: 1040px;
-    width: 400px;
-    text-align: left;
-    height: 80vh;
-    background-color: rgb(188, 0, 0);
+.texte-fond-blanc-banner h4 {
+  text-align: center;
+  text-decoration: none;
+  box-shadow: inset 0 -14px 0 red;
+  -webkit-box-shadow: inset 0 -11px 0 red;
+  -webkit-transition: background .2s ease;
+  transition: background .2s ease;
+  height: 23px;
+  width: 182px;
 }
 
-.info-banner {
+.image-banner {
   position: relative;
-  top: 100px;
-  right: 350px;
-  width: 700px;
-  height: 40vh;
-  background-color: white;
 }
 
-.texte-info-banner {
-  padding-top: 80px;
-  padding-left: 200px;
+.fond-rouge-banner {
+  position: relative;
+  background-color: rgb(188, 0, 0);
+  height: 600px;
+  width: 490px;
+  left: 215px;
+}
 
+.rouge-transparent-banner {
+    opacity: 0.5;
+    position: relative;
+    background-color: rgb(188, 0, 0);
+    height: 300px;
+    width: 490px;
+    bottom: 479px;
+    left: 588px;
+}
+
+.fond-blanc-banner {
+    z-index: 1;
+    position: relative;
+    background-color: #ffffff;
+    height: 300px;
+    width: 490px;
+    bottom: 778px;
+    left: 674px;
+}
+
+.en-savoir-plus-button {
+    text-align: center;
+    background-color: rgb(188, 0, 0);
+    color: #ffffff;
+    position: relative;
+    width: 214px;
+    padding: 23px 3px;
+    bottom: 816px;
+    left: 823px;
+    z-index: 1;
+    /* border: 1px solid; */
+    color: #ffffff;
+    text-decoration: none;
+                -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+}
+
+.en-savoir-plus-button a {
+  text-decoration: none;
+  color: white;
 }
 </style>
 
@@ -58,7 +120,7 @@
 
 <style>
 .texte-presentation {
-  margin: 75px 100px 75px 100px;
+  margin: -627px 100px 75px 100px;
 }
 </style>
 
@@ -93,7 +155,7 @@
 
 <style>
   .partenaires {
-    margin: 75px 100px 75px 100px;
+    margin: 150px 100px 150px 100px;
   }
 
   .lien-partenaires {
@@ -101,7 +163,7 @@
   }
 
   .boutton-partenaires {
-            -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
     background-color: rgb(0, 0, 123);
     color: #ffffff;
@@ -142,7 +204,7 @@
 
 <style>
   .pictos-avantages {
-    margin: 75px 100px 75px 100px;
+    margin: 150px 100px 150px 100px;
 
   }
   .content-blue {
@@ -200,7 +262,7 @@
 
 
 <div class="col-sm-6">
-    <div class="image-golf">
+    <div class="image-golf" style="vertical-align: middle;">
       <%= image_tag 'Visuel_Plan.png'%>
     </div>
 </div>
@@ -229,7 +291,7 @@
     list-style-type: none;
   }
   .stands-marques {
-    margin: 75px 100px 0px 100px;
+    margin: 130px 75px 0px 100px;
   }
 
   .image-golf {
@@ -244,7 +306,7 @@
     opacity: 1;
     width: 587px;
     position: relative;
-    left: 49px;
+    left: 61px;
     top: -250px;
     -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
@@ -285,4 +347,10 @@
     text-decoration: none;
   }
 </style>
-
+<div class="row">
+<div class="retour-en-haut">
+<div class="fleche">
+<i class="fas fa-arrow-up fa-3x"></i>
+</div>
+</div>
+</div>
