--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-
+<div class="row">
 <div class="footer">
 
   <div class="partie1">
@@ -30,7 +30,7 @@
     </div>
 
 </div>
-
+</div>
 <style>
   .retour-en-haut {
     height: 100px;
